# harfbuzz-cmake

./: CMakeLists.txt
cmake/: CloneAndInstall.cmake  config.h.in
src/: CMakeLists.txt  hb-private.hh
src/hb-ucdn/: CMakeLists.txt
test/: CMakeLists.txt
test/api/: CMakeLists.txt
